fixed horrible scale issue on safari

--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ button:focus {
 
 .headshot {
   max-width: 45rem;
+  max-height: 45rem;
 }
 
 .logo_h {
